# kiwi-tcms-extras-social-auth

./: .gitignore  LICENSE  README.md  THIRD_PARTY_ACKNOWLEDGEMENTS  pyproject.toml
src/tcms_extras_socialauth/: __init__.py  menu.py  urls.py
src/tcms_extras_socialauth/pipelines/: __init__.py  mail.py  password.py  user.py
src/tcms_extras_socialauth/tcms_settings_dir/: __init__.py  social_auth_config.py
src/tcms_extras_socialauth/templates/registration/: custom_login.html
src/tcms_extras_socialauth/templatetags/: __init__.py  social_icons.py
src/tcms_plugin_socialauth/templates/registration/: custom_login.html
